many fixes