@@ -6,20 +6,20 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
+import ru.gdlbo.search.searcher.repository.FileHistory;
 import ru.gdlbo.search.searcher.repository.FileInfo;
 
 import java.io.File;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.List;
+import java.util.*;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 @Controller
 public class FileHistoryController {
     // This method is responsible for retrieving the history of a file
     @GetMapping("/api/history")
-    public ResponseEntity<List<FileInfo>> getFileHistory(@RequestParam String fileName) {
+    public ResponseEntity<List<FileHistory>> getFileHistory(@RequestParam String fileName) {
         System.out.println("Request received to get history for file: " + fileName);
 
         File file = new File(fileName);
@@ -27,7 +27,21 @@ public class FileHistoryController {
         File hiddenDir = new File(parentDir, ".history");
 
         // Get all files in the hidden directory with the given file name
-        File[] files = hiddenDir.listFiles((dir, name) -> name.startsWith(file.getName()));
+        File[] files = hiddenDir.listFiles((dir, name) -> {
+            String baseName = file.getName();
+            int lastDotIndex = baseName.lastIndexOf('.');
+            if (lastDotIndex != -1) {
+                baseName = baseName.substring(0, lastDotIndex);
+            }
+
+            String currentFileNameWithoutExtension = name;
+            int currentFileLastDotIndex = currentFileNameWithoutExtension.lastIndexOf('.');
+            if (currentFileLastDotIndex != -1) {
+                currentFileNameWithoutExtension = currentFileNameWithoutExtension.substring(0, currentFileLastDotIndex);
+            }
+
+            return currentFileNameWithoutExtension.startsWith(baseName);
+        });
 
         // If there are no files, return an empty list
         if (files == null) {
@@ -40,13 +54,27 @@ public class FileHistoryController {
         fileList.sort(Comparator.comparingLong(File::lastModified));
         String location = file.getAbsolutePath();
 
-//        List<FileInfo> fileHistory = fileList.stream()
-//                .map(f -> new FileInfo(null, null, null, null, null, null, null, location, null))
-//                .collect(Collectors.toList());
+        List<FileHistory> fileHistory = fileList.stream()
+                .map(f -> new FileHistory(extractDateFromFileName(f), location))
+                .toList();
 
         System.out.println("Returning history for file: " + fileName);
 
-        return ResponseEntity.ok(null);
+        return ResponseEntity.ok(fileHistory);
+    }
+
+    private static String extractDateFromFileName(File file) {
+        String fileName = file.getName();
+        String datePattern = "\\d{4}-\\d{2}-\\d{2}_\\d{2}-\\d{2}-\\d{2}";
+
+        Pattern pattern = Pattern.compile(datePattern);
+        Matcher matcher = pattern.matcher(fileName);
+
+        if (matcher.find()) {
+            return matcher.group(0).replace("_", " ");
+        } else {
+            return "N/A";
+        }
     }
 
     // This method is responsible for removing a file from the history
